# SKSE-Menu-Framework-3

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: Version.hpp.in  XSEPlugin.cmake
include/: Application.h  Config.h  Event.h  Hooks.h  PCH.h  SKSEMenuFramework.h  StyleManager.h  TextureLoader.h  WindowManager.h
include/CustomRE/: Main.h
public/SKSE/plugins/: SKSEMenuFramework.LICENSE.md  SKSEMenuFramework.ini  SKSEMenuFrameworkStrings.json
resources/: SKSEMenuFramework.h
src/: Application.cpp  Config.cpp  Event.cpp  FontManager.cpp  FontManager.h  GameLock.cpp  Hooks.cpp  Input.cpp  Licence.cpp  Licence.h  PCH.hpp  Renderer.cpp  SKSEMenuFramework.cpp  SKSEMenuFramework.h  StyleManager.cpp  TextureLoader.cpp  TextureLoader.h  Theme.cpp  Translations.cpp  UI.cpp  WindowManager.cpp  cimgui.cpp  plugin.cpp
src/imgui/: imgui_impl_win32.cpp
